# multiLanguage-weather-etl

./: .dockerignore  .gitignore  Dockerfile  Makefile  Manifest.toml  README.md  dependency.R  project-setup.sh  pyproject.toml  weather_etl_by_city_dag.py
.codespaces/: setup.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/scripts/: 1_system_setup.sh  2_python_setup.sh  3_r_setup.sh  post_create.sh
.github/workflows/: ci.yml  prebuild-devcontainer.yml
airflow/analysis_jl/: analysis.jl
airflow/config/: constants.R  constants.jl  constants.py
airflow/dags/: weather_etl_by_city_dag.py
airflow/helpers/: csv_path_writer.py  date_utils.py  db_loader.py  db_utils.py  geocode_utils.py  schemas.py  sqlite_utils.py  weather_api.py
airflow/helpers_R/: get_weather_summary_path.R  load_weather_summary_csv.R
airflow/helpers_jl/: csv_from_txt_loader.jl  path_utils.jl
airflow/visualizations/: yearly_weather_trends.R
renv/: settings.json
