[project]
name = "multiLanguage-weather-etl"
version = "0.1.0"
description = "ETL pipeline for historical and predictive weather analysis."
authors = [
    { name = "darksolitaire9", email = "darksolitaire9+etl@gmail.com" }
]
dependencies = [
    "requests",
    "polars",
    "pyarrow"
]

[tool.setuptools.packages.find]
# Only include the main Python package & helpers (adjust "airflow*" if needed)
include = ["airflow*"]
# Exclude all non-Python code and folders to avoid setuptools errors
exclude = ["renv*", "helpers_R*", "helpers_jl*", "julia*", "R*"]
